[package]
name = "scorpion"
version = "0.1.0"
authors = ["Christopher Mühl <christopher@padarom.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "^0.28.0"
realsense-rust = { git = "https://github.com/padarom/realsense-rust", rev = "8ac91e0", features = ["with-image", "with-nalgebra"] }
futures = "^0.3.0"
anyhow = "^1.0"
